# AudioDSP

./: .gitmodules  CMakeLists.txt  README.md  main  main.cpp
Catch_tests/: CMakeLists.txt  add_test.cpp  audio_engine_test.cpp  bh_windowing_test.cpp  filter_test.cpp  noise_generator_test.cpp  pulse_gen_test.cpp  simple_plot_test.cpp  sin_generator_test.cpp  wav_reader_test.cpp
Catch_tests/Data/: bh_window_ref.h  ref_iir.h
cmake/: imgui.cmake  implot.cmake
helper/: wav_reader.m
include/: AudioEngine.h  AudioEngineMono.h  AudioEngineStereo.h  BlackmanHarrisWindow.h  Filter.h  GuiBridgeSink.h  IAudioEngine.h  IAudioSink.h  IAudioSource.h  IDSPProcessor.h  IGuiElement.h  NoiseGenerator.h  PortAudioInput.h  PortAudioOutput.h  PulseGenerator.h  SimpleDSPProcessor.h  SimplePlot.h  SinGenerator.h  SupportedFormats.h  WavHeader.h  WavReader.h  add.h  gui.h
src/: AudioEngine.cpp  AudioEngineMono.cpp  AudioEngineStereo.cpp  BlackmanHarrisWindow.cpp  Filter.cpp  NoiseGenerator.cpp  PortAudioInput.cpp  PortAudioOutput.cpp  PulseGenerator.cpp  SimpleDSPProcessor.cpp  SinGenerator.cpp  WavReader.cpp  add.cpp
